0.1.3
 - added 2D phase fitting algorithm (method='image')
0.1.2
 - updated default keyword arguments for sphere models
 - added Mie model (based on BHFIELD) (#1)
0.1.1
 - added projection model
 - minor additions to API
0.1.0
 - initial release